--- a/src/main/java/Main.form
+++ b/src/main/java/Main.form
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Main">
-  <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="9" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="8" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="45" width="345" height="339"/>
+      <xy x="20" y="45" width="347" height="339"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="589f" class="javax.swing.JButton" binding="buttonCalculate">
-        <constraints>
-          <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="69" height="34"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Calculate"/>
-        </properties>
-      </component>
       <component id="387c1" class="javax.swing.JSlider" binding="focalSlider">
         <constraints>
           <grid row="6" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -37,12 +27,12 @@
       </component>
       <hspacer id="2f4d5">
         <constraints>
-          <grid row="0" column="4" row-span="8" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="4" row-span="7" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <hspacer id="fde5c">
         <constraints>
-          <grid row="0" column="0" row-span="8" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="7" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <component id="1f901" class="javax.swing.JLabel" binding="focalLabel">
@@ -68,7 +58,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <labelFor value="ede43"/>
+          <labelFor value="92527"/>
           <text value="Display Height"/>
         </properties>
       </component>
@@ -91,10 +81,10 @@
       </component>
       <component id="dc4a3" class="javax.swing.JLabel" binding="errorLabel">
         <constraints>
-          <grid row="8" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value=""/>
+          <text value=" "/>
         </properties>
       </component>
       <component id="35f20" class="javax.swing.JTextField" binding="fovOutput">
@@ -115,7 +105,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="ede43" class="javax.swing.JTextField" binding="heightInput">
+      <component id="92527" class="javax.swing.JTextField" binding="heightInput">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="50" height="-1"/>
