removed pointless variable and set slider minimum value to 1

--- a/src/main/java/Main.form
+++ b/src/main/java/Main.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Main">
-  <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="9" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="10" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="45" width="330" height="265"/>
+      <xy x="20" y="45" width="379" height="285"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -17,11 +17,12 @@
           <inverted value="false"/>
           <majorTickSpacing value="0"/>
           <maximum value="300"/>
+          <minimum value="1"/>
           <paintLabels value="false"/>
           <paintTicks value="false"/>
           <paintTrack value="true"/>
           <snapToTicks value="false"/>
-          <value value="0"/>
+          <value value="1"/>
           <valueIsAdjusting value="false"/>
         </properties>
       </component>
@@ -44,7 +45,7 @@
       </component>
       <component id="c4b6f" class="javax.swing.JTextField" binding="widthInput">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
@@ -52,11 +53,13 @@
         <constraints>
           <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <editor value=""/>
+        </properties>
       </component>
       <component id="1f901" class="javax.swing.JLabel" binding="focalLabel">
         <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="4" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <labelFor value="78d10"/>
@@ -65,7 +68,7 @@
       </component>
       <component id="efab8" class="javax.swing.JLabel" binding="heightLabel">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="4" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <labelFor value="20b82"/>
@@ -80,20 +83,21 @@
           <enabled value="true"/>
           <horizontalAlignment value="10"/>
           <labelFor value="35f20"/>
-          <text value="Field of View"/>
+          <text value=" Field of View "/>
         </properties>
       </component>
       <component id="35f20" class="javax.swing.JTextField" binding="fovOutput">
         <constraints>
-          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <editable value="false"/>
+          <horizontalAlignment value="10"/>
         </properties>
       </component>
       <component id="20b82" class="javax.swing.JTextField" binding="heightInput">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
@@ -110,6 +114,11 @@
       <vspacer id="6b3df">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="5" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <vspacer id="9a84">
+        <constraints>
+          <grid row="9" column="0" row-span="1" col-span="5" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
     </children>
