enshartified the slider, changed gui layout, changed object names, and returned the button hahahahaha

--- a/src/main/java/Main.form
+++ b/src/main/java/Main.form
@@ -1,32 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Main">
-  <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="10" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="9" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="45" width="379" height="285"/>
+      <xy x="20" y="45" width="379" height="276"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="387c1" class="javax.swing.JSlider" binding="focalSlider">
-        <constraints>
-          <grid row="7" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <enabled value="true"/>
-          <inverted value="false"/>
-          <majorTickSpacing value="0"/>
-          <maximum value="300"/>
-          <minimum value="1"/>
-          <paintLabels value="false"/>
-          <paintTicks value="false"/>
-          <paintTrack value="true"/>
-          <snapToTicks value="false"/>
-          <value value="1"/>
-          <valueIsAdjusting value="false"/>
-        </properties>
-      </component>
-      <component id="7c00a" class="javax.swing.JLabel" binding="widthLabel">
+      <component id="7c00a" class="javax.swing.JLabel" binding="labelWidth">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -35,80 +17,20 @@
           <text value="Display Width"/>
         </properties>
       </component>
-      <component id="dc4a3" class="javax.swing.JLabel" binding="errorLabel">
-        <constraints>
-          <grid row="8" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value=" "/>
-        </properties>
-      </component>
-      <component id="c4b6f" class="javax.swing.JTextField" binding="widthInput">
+      <component id="c4b6f" class="javax.swing.JTextField" binding="inputWidth">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
-      <component id="78d10" class="javax.swing.JSpinner" binding="focalInput">
-        <constraints>
-          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <editor value=""/>
-        </properties>
-      </component>
-      <component id="1f901" class="javax.swing.JLabel" binding="focalLabel">
-        <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="4" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <labelFor value="78d10"/>
-          <text value="Focal Length"/>
-        </properties>
-      </component>
-      <component id="efab8" class="javax.swing.JLabel" binding="heightLabel">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="4" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <labelFor value="20b82"/>
-          <text value="Display Height"/>
-        </properties>
-      </component>
-      <component id="ddeb0" class="javax.swing.JLabel" binding="fovLabel">
-        <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <enabled value="true"/>
-          <horizontalAlignment value="10"/>
-          <labelFor value="35f20"/>
-          <text value=" Field of View "/>
-        </properties>
-      </component>
-      <component id="35f20" class="javax.swing.JTextField" binding="fovOutput">
-        <constraints>
-          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <editable value="false"/>
-          <horizontalAlignment value="10"/>
-        </properties>
-      </component>
-      <component id="20b82" class="javax.swing.JTextField" binding="heightInput">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
       <hspacer id="d68f3">
         <constraints>
-          <grid row="1" column="0" row-span="7" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="6" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <hspacer id="3d604">
         <constraints>
-          <grid row="1" column="4" row-span="7" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="4" row-span="6" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
       <vspacer id="6b3df">
@@ -118,9 +40,88 @@
       </vspacer>
       <vspacer id="9a84">
         <constraints>
-          <grid row="9" column="0" row-span="1" col-span="5" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="5" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <component id="35f20" class="javax.swing.JTextField" binding="outputFOV">
+        <constraints>
+          <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <editable value="false"/>
+          <horizontalAlignment value="10"/>
+        </properties>
+      </component>
+      <component id="ddeb0" class="javax.swing.JLabel" binding="labelFOV">
+        <constraints>
+          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="4" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <enabled value="true"/>
+          <horizontalAlignment value="10"/>
+          <labelFor value="35f20"/>
+          <text value="Field of View"/>
+        </properties>
+      </component>
+      <component id="78d10" class="javax.swing.JSpinner" binding="inputFocal">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <editor value=""/>
+        </properties>
+      </component>
+      <component id="1f901" class="javax.swing.JLabel" binding="labelFocal">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <horizontalAlignment value="10"/>
+          <labelFor value="78d10"/>
+          <text value="Focal Length"/>
+        </properties>
+      </component>
+      <component id="20b82" class="javax.swing.JTextField" binding="inputHeight">
+        <constraints>
+          <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="efab8" class="javax.swing.JLabel" binding="labelHeight">
+        <constraints>
+          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="4" hsize-policy="0" anchor="2" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <labelFor value="20b82"/>
+          <text value="Display Height"/>
+        </properties>
+      </component>
+      <component id="3cadd" class="javax.swing.JButton" binding="buttonCalculate">
+        <constraints>
+          <grid row="6" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Calculate"/>
+        </properties>
+      </component>
+      <vspacer id="617b7">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <hspacer id="42c89">
+        <constraints>
+          <grid row="1" column="2" row-span="4" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <component id="dc4a3" class="javax.swing.JLabel" binding="labelError">
+        <constraints>
+          <grid row="7" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value=" "/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
